<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ml.abyss.app.component.MainActivity">

    <Button
        android:id="@+id/autoCompleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actv_title"/>

    <Button
        android:id="@+id/showToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton_title"/>

    <Button
        android:id="@+id/showCheckBoxButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkedbox_title"/>


    <Button
        android:id="@+id/showRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_title"/>
</LinearLayout>
