<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ml.abyss.app.component.ToggleButtonActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton_title"/>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_off_text"
        android:textOn="@string/toggle_on_text"/>

    <TextView
        android:id="@+id/showTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
