<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ml.abyss.app.component.RadioButtonActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_title"/>

    <RadioGroup
        android:id="@+id/sexRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/manRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_item_man"/>

        <RadioButton
            android:id="@+id/womanRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_item_woman"/>
    </RadioGroup>
</LinearLayout>
